feat: router dom

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": "https://MaksimBozhko.github.io/friday-project",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.11.16",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -77,6 +81,7 @@
     "@storybook/react": "^6.5.16",
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "prettier": "2.8.7",
     "prop-types": "^15.8.1",
     "webpack": "^5.76.3"
   }
