--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.61.0",
     "storybook": "^6.5.16",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
