--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.3.4",
     "gh-pages": "^5.0.0",
     "init": "^0.1.2",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
